force-app/main/default/objects/animalos__Breed__c/fields/animalos__Breed_ID__c.field-meta.xml
<CustomField>
    <fullName>animalos__Breed_ID__c</fullName>
    <label>Breed ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>