force-app/main/default/objects/animalos__Breed__c/fields/animalos__Endangered_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Endangered_Status__c</fullName>
    <label>Endangered Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critically Endangered</fullName>
            </value>
            <value>
                <fullName>Data Deficient</fullName>
            </value>
            <value>
                <fullName>Endangered</fullName>
            </value>
            <value>
                <fullName>Extinct</fullName>
            </value>
            <value>
                <fullName>Extinct In The Wild</fullName>
            </value>
            <value>
                <fullName>Least Concern</fullName>
            </value>
            <value>
                <fullName>Lower Risk: Conservation Dependent</fullName>
            </value>
            <value>
                <fullName>Near Threatened</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Regionally Extinct</fullName>
            </value>
            <value>
                <fullName>Vulnerable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>