force-app/main/default/objects/animalos__Breed__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Animal_Type</valueSetName>
    </valueSet>
</CustomField>