force-app/main/default/objects/animalos__Breed__c/fields/aos_PetRescue_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_PetRescue_Name__c</fullName>
    <label>PetRescue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>