force-app/main/default/objects/animalos__Breed__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Class__c</columns>
    <columns>animalos__Type__c</columns>
    <columns>animalos__Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>